[package]
name = "settle"
version = "0.33.0"
edition = "2018"
authors = [ "xylous <xylous.e@gmail.com>" ]
description = "CLI tool for managing digital Zettelkasten"
keywords = [ "zettelkasten", "zettel", "notes", "note-taking" ]
categories = [ "command-line-utilities" ]
license = "MIT"
repository = "https://github.com/xylous/settle"
readme = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5" }
clap_complete = "*"
rusqlite = { version = "0.25.3", features = [ "backup" ] }
rayon = { version = "1.5.1" }
glob = { version = "0.3.0" }
regex = { version = "1.5.4" }
serde = { version = "1.0.130", features = [ "derive" ] }
confy = { version = "*", default_features = false, features = [ "yaml_conf" ] }
shellexpand = { version = "2.1.0" }

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
