[package]
name = "settle"
version = "0.40.0"
edition = "2018"
authors = [ "xylous <xylous.e@gmail.com>" ]
description = "CLI tool for managing a digital Zettelkasten"
keywords = [ "zettelkasten", "zettel", "notes", "note-taking" ]
categories = [ "command-line-utilities" ]
license = "MIT"
repository = "https://github.com/xylous/settle"
readme = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2" }
clap_complete = { version = "4.3.1" }
rusqlite = { version = "0.29.0", features = [ "backup" ] }
rayon = { version = "1.7.0" }
glob = { version = "0.3.1" }
regex = { version = "1.8.4" }
serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = { version = "1.0.105" }
serde_yaml = { version = "0.9.21" }
shellexpand = { version = "3.1.0" }
chrono = { version = "0.4.26" }
dialoguer = { version = "0.10.4" }
petgraph = { version = "0.6.3", features = ["serde-1"] }
